Added date functions and added more TODO notes

--- a/6-budgety/starter/style.css
+++ b/6-budgety/starter/style.css
@@ -104,6 +104,7 @@ body {
 .budget__income--percentage,
 .budget__expenses--percentage {
     float: left;
+    height: 1.1rem;
     width: 34px;
     font-size: 11px;
     padding: 3px 0;
