--- a/6-budgety/starter/style.css
+++ b/6-budgety/starter/style.css
@@ -31,8 +31,12 @@ body {
     color: #FF5049 !important;
 }
 
+.red:hover {
+    background: rgba(248, 142, 138, 0.123) !important;
+}
+
 .red-focus:focus {
-    border: 1px solid #FF5049 !important;
+    border: 1px solid rgb(248, 142, 138) !important;
 }
 
 /**********************************************
@@ -156,7 +160,7 @@ body {
     padding: 12px 15px;
     margin-right: 10px;
     border-radius: 5px;
-    transition: border 0.3s;
+    transition: border 0.2s;
 }
 
 .add__description {
@@ -168,6 +172,8 @@ body {
 }
 
 .add__btn {
+    padding: 1px 5px;
+    border-radius: 10px;
     font-size: 35px;
     background: none;
     border: none;
@@ -177,6 +183,11 @@ body {
     vertical-align: middle;
     line-height: 1.1;
     margin-left: 10px;
+    transition: all 0.2s ease-in;
+}
+
+.add__btn:hover {
+    background: rgba(40, 185, 180, 0.123);
 }
 
 .add__btn:active {
@@ -218,7 +229,7 @@ h2 {
     margin-bottom: 15px;
 }
 
-.icome__title {
+.income__title {
     color: #28B9B5;
 }
 
